--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: python:
+language: python
+python:
   - "2.7"
-  - "3.3"
   - "3.4"
   - "3.5"
   - "3.6"
@@ -9,6 +9,7 @@ language: python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install .
 
 # command to run tests
 script:
