--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,11 @@
 language: python
 python:
-  - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
 
 before_install:
   - sudo apt-get update
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      sudo apt install python-gdal
-    else
-      sudo apt install python3-gdal
-    fi
 
 addons:
   apt:
@@ -19,6 +13,7 @@ addons:
     - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
     packages:
     - libgdal-dev
+    - python3-gdal
 
 # command to install dependencies
 install:
