--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,13 @@ python:
 
 before_install:
   - sudo apt-get update
+  - sudo apt-get install libgdal-dev
+  - sudo apt-get install python3-gdal
 
 addons:
   apt:
     sources:
     - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
-    packages:
-    - libgdal-dev
-    - python3-gdal
 
 # command to install dependencies
 install:
