--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,22 @@
 language: python
+sudo: false
 python:
   - "3.4"
   - "3.5"
   - "3.6"
-
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install libgdal-dev
-  - sudo apt-get install python3-gdal
+  - python -m pip install -U pip
+  - python -m pip install wheel
 
 addons:
   apt:
     sources:
     - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
+    packages:
+    - gdal-bin
+    - libproj-dev
+    - libgdal-dev
+    - python3-gdal
 
 # command to install dependencies
 install:
