--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
 before_install:
   - python -m pip install -U pip
   - python -m pip install wheel
-  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
   - sudo apt-get update
-  - sudo apt-get install python-gdal gdal-bin libproj-dev libgdal-dev
+  - sudo apt-get install python-gdal gdal-bin libproj-dev libgdal-dev -y
 
 # command to install dependencies
 install:
