--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,62 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+cache:
+  directories:
+    - $GDALINST
+    - ~/.cache/pip
+env:
+  global:
+    - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
+    - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
+    - GDALINST=$HOME/gdalinstall
+    - GDALBUILD=$HOME/gdalbuild
+  matrix:
+    - GDALVERSION="1.11.5"
+    - GDALVERSION="2.0.3"
+    - GDALVERSION="2.1.4"
+    - GDALVERSION="2.2.1"
+    - GDALVERSION="2.2.2"
+    - GDALVERSION="2.2.3"
+    - GDALVERSION="master"
+matrix:
+  allow_failures:
+    - env: GDALVERSION="master"
+addons:
+  apt:
+    packages:
+    - gdal-bin
+    - libproj-dev
+    - libhdf5-serial-dev
+    - libgdal-dev
+    - libatlas-dev
+    - libatlas-base-dev
+    - gfortran
+before_script: # configure a headless display to test matplotlib
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "sleep 3"
 before_install:
   - python -m pip install -U pip
   - python -m pip install wheel
-  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
-  - sudo apt-get update
-  - sudo apt-get install python-gdal gdal-bin libproj-dev libgdal-dev -y
-
-# command to install dependencies
+  - travis_wait . ./scripts/travis_gdal_install.sh
+  - export PATH=$GDALINST/gdal-$GDALVERSION/bin:$PATH
+  - export LD_LIBRARY_PATH=$GDALINST/gdal-$GDALVERSION/lib:$LD_LIBRARY_PATH
 install:
+  - "if [ \"$GDALVERSION\" == \"master\" -o $(gdal-config --version) == \"$GDALVERSION\" ]; then echo \"Using gdal $GDALVERSION\"; else echo \"NOT using gdal $GDALVERSION as expected; aborting\"; exit 1; fi"
   - pip install -r requirements.txt
   - pip install .
-
+  - "GDAL_CONFIG=$GDALINST/gdal-$GDALVERSION/bin/gdal-config python -m pip install --upgrade --force-reinstall -e .[test,plot]"
+  - "python -m pip install coveralls>=1.1"
+  - "rio --version"
+  - "rio --gdal-version"
+  - "python -m pip list"
+script:
+  - "if [[ $TRAVIS_PYTHON_VERSION == 3.5 && $GDALVERSION == 2.1.0 ]]; then python -m pytest --doctest-ignore-import-errors --doctest-glob='*.rst' docs/*.rst -k 'not index and not quickstart and not switch' ; fi"
+  - python -m pytest -rxXs --cov rasterio --cov-report term-missing
+after_success:
+  - coveralls || echo "!! intermittent coveralls failure"
+# command to install dependencies
 # command to run tests
 script:
   - pytest
