--- a/.travis.yml
+++ b/.travis.yml
@@ -10,39 +10,31 @@ cache:
     - ~/.cache/pip
 env:
   global:
-    - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
-    - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
     - GDALINST=$HOME/gdalinstall
     - GDALBUILD=$HOME/gdalbuild
-  matrix:
-    - GDALVERSION="1.11.5"
-    - GDALVERSION="2.0.3"
-    - GDALVERSION="2.1.4"
-    - GDALVERSION="2.2.1"
-    - GDALVERSION="2.2.2"
-    - GDALVERSION="2.2.3"
-    - GDALVERSION="master"
-matrix:
-  allow_failures:
-    - env: GDALVERSION="master"
 
 # command to install dependencies
 addons:
   apt:
+    sources:
+    - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
     packages:
     - gdal-bin
     - libproj-dev
     - libgdal-dev
     - python-gdal
     - proj-bin
+
 before_install:
   - python -m pip install -U pip
   - python -m pip install wheel
   - export PATH=$GDALINST/gdal-$GDALVERSION/bin:$PATH
   - export LD_LIBRARY_PATH=$GDALINST/gdal-$GDALVERSION/lib:$LD_LIBRARY_PATH
+
 install:
   - pip install -r requirements.txt
   - pip install .
+
 # command to run tests
 script:
   - pytest
