--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+
+virtualenv:
+  system_site_packages: true
+  
 env:
   global:
     - GDALINST=$HOME/gdalinstall
