--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ pyspatialml/__pycache__/utils.cpython-37.pyc
 pyspatialml/__pycache__/vector.cpython-36.pyc
 pyspatialml/datasets/__pycache__/nc_dataset.cpython-37.pyc
 pyspatialml/__pycache__/__main.cpython-37.pyc
+pyspatialml/__pycache__/__main.cpython-37.pyc
