setup.py update

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,2 @@
 include README.rst
-include pyspatialml/datasets/nc_files/*.*
-include pyspatialml/datasets/meuse_files/*.*
+include pyspatialml/datasets/*.*
