--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,13 @@ pyspatialml/__pycache__/base.cpython-37.pyc
 pyspatialml/__pycache__/raster.cpython-37.pyc
 pyspatialml/__pycache__/rasterlayer.cpython-37.pyc
 .idea/codeStyles/codeStyleConfig.xml
+__pycache__/setup.cpython-37.pyc
+docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/entry_points.txt
+docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/LICENSE
+docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/PKG-INFO
+docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/RECORD
+docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/requires.txt
+docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/top_level.txt
+docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/WHEEL
+docs/.eggs/pytest_runner-5.1-py3.7.egg/ptr.py
+docs/.eggs/README.txt
