Bug fix to recognizing dtype in extract_vector

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,11 @@ docs/.eggs/README.txt
 pyspatialml.egg-info/dependency_links.txt
 pyspatialml/datasets/__pycache__/meuse.cpython-37.pyc
 pyspatialml/datasets/__pycache__/nc.cpython-37.pyc
+.eggs/pytest_runner-5.2-py3.7.egg/ptr.py
+.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/WHEEL
+.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/top_level.txt
+.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/requires.txt
+.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/RECORD
+.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/PKG-INFO
+.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/LICENSE
+.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/entry_points.txt
