--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ pyspatialml/__pycache__/base\.cpython-36\.pyc
 pyspatialml/__pycache__/preprocessing\.cpython-36\.pyc
 
 pyspatialml/__pycache__/raster\.cpython-36\.pyc
+pyspatialml/__pycache__/vector.cpython-37.pyc
