--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ pyspatialml/__pycache__/preprocessing\.cpython-36\.pyc
 
 pyspatialml/__pycache__/raster\.cpython-36\.pyc
 pyspatialml/__pycache__/vector.cpython-37.pyc
+tests/__pycache__/test_calc.cpython-37.pyc
