--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,10 @@ pyspatialml/__pycache__/preprocessing\.cpython-36\.pyc
 pyspatialml/__pycache__/raster\.cpython-36\.pyc
 pyspatialml/__pycache__/vector.cpython-37.pyc
 tests/__pycache__/test_calc.cpython-37.pyc
+tests/__pycache__/test_mask.cpython-37.pyc
+tests/__pycache__/test_crop.cpython-37.pyc
+tests/__pycache__/test_drop.cpython-37.pyc
+tests/__pycache__/test_intersect.cpython-37.pyc
+tests/__pycache__/test_rename.cpython-37.pyc
+tests/__pycache__/test_to_crs.cpython-37.pyc
+tests/__pycache__/test_tocrs.cpython-37.pyc
