--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,64 @@ tests/__pycache__/test_rename.cpython-37.pyc
 tests/__pycache__/test_to_crs.cpython-37.pyc
 tests/__pycache__/test_tocrs.cpython-37.pyc
 tests/__pycache__/test_append.cpython-37.pyc
+tests/__pycache__/test_tocrs.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_rename.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_prediction.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_mask.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_intersect.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_initiation.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_indexing.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_extract.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_drop.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_crop.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_calc.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/test_append.cpython-37-pytest-5.3.5.pyc
+tests/__pycache__/__init__.cpython-37.pyc
+docs/_build/html/_static/js/theme.js
+docs/_build/html/_static/js/modernizr.min.js
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.woff2
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.woff
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.ttf
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.eot
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.woff2
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.woff
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.ttf
+docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.eot
+docs/_build/html/_static/fonts/RobotoSlab-Regular.ttf
+docs/_build/html/_static/fonts/RobotoSlab-Bold.ttf
+docs/_build/html/_static/fonts/Lato/lato-regular.woff2
+docs/_build/html/_static/fonts/Lato/lato-regular.woff
+docs/_build/html/_static/fonts/Lato/lato-regular.ttf
+docs/_build/html/_static/fonts/Lato/lato-regular.eot
+docs/_build/html/_static/fonts/Lato/lato-italic.woff2
+docs/_build/html/_static/fonts/Lato/lato-italic.woff
+docs/_build/html/_static/fonts/Lato/lato-italic.ttf
+docs/_build/html/_static/fonts/Lato/lato-italic.eot
+docs/_build/html/_static/fonts/Lato/lato-bolditalic.woff2
+docs/_build/html/_static/fonts/Lato/lato-bolditalic.woff
+docs/_build/html/_static/fonts/Lato/lato-bolditalic.ttf
+docs/_build/html/_static/fonts/Lato/lato-bolditalic.eot
+docs/_build/html/_static/fonts/Lato/lato-bold.woff2
+docs/_build/html/_static/fonts/Lato/lato-bold.woff
+docs/_build/html/_static/fonts/Lato/lato-bold.ttf
+docs/_build/html/_static/fonts/Lato/lato-bold.eot
+docs/_build/html/_static/fonts/Lato-Regular.ttf
+docs/_build/html/_static/fonts/Lato-Bold.ttf
+docs/_build/html/_static/fonts/Inconsolata.ttf
+docs/_build/html/_static/fonts/Inconsolata-Regular.ttf
+docs/_build/html/_static/fonts/Inconsolata-Bold.ttf
+docs/_build/html/_static/fonts/fontawesome-webfont.woff2
+docs/_build/html/_static/fonts/fontawesome-webfont.woff
+docs/_build/html/_static/fonts/fontawesome-webfont.ttf
+docs/_build/html/_static/fonts/fontawesome-webfont.svg
+docs/_build/html/_static/fonts/fontawesome-webfont.eot
+docs/_build/html/_static/css/theme.css
+docs/_build/html/_static/css/badge_only.css
+.eggs/pytest_runner-5.2-py3.8.egg/ptr.py
+.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/WHEEL
+.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/top_level.txt
+.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/requires.txt
+.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/RECORD
+.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/PKG-INFO
+.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/LICENSE
+.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/entry_points.txt
