--- a/.gitignore
+++ b/.gitignore
@@ -1,174 +1,7 @@
-
 .DS_Store
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/entry_points.txt
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/LICENSE
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/namespace_packages.txt
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/PKG-INFO
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/RECORD
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/requires.txt
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/top_level.txt
-.eggs/pytest_runner-4.4-py3.6.egg/EGG-INFO/WHEEL
-.eggs/pytest_runner-4.4-py3.6.egg/ptr.py
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/entry_points.txt
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/LICENSE
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/namespace_packages.txt
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/PKG-INFO
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/RECORD
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/requires.txt
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/top_level.txt
-.eggs/pytest_runner-4.4-py3.7.egg/EGG-INFO/WHEEL
-.eggs/pytest_runner-4.4-py3.7.egg/ptr.py
-.eggs/README.txt
-.idea/encodings.xml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/libraries/R_User_Library.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/Pyspatialml.iml
-.idea/vcs.xml
-.idea/workspace.xml
-.vscode/settings.json
-examples/.ipynb_checkpoints/Example-checkpoint.py
-examples/.ipynb_checkpoints/meuse_example-checkpoint.ipynb
-pyspatialml.egg-info/PKG-INFO
-pyspatialml.egg-info/requires.txt
-pyspatialml.egg-info/SOURCES.txt
-pyspatialml.egg-info/top_level.txt
-pyspatialml/.ipynb_checkpoints/__main-checkpoint.py
-pyspatialml/.ipynb_checkpoints/plotting-checkpoint.py
-pyspatialml/__pycache__/__init__.cpython-37.pyc
-pyspatialml/__pycache__/__main.cpython-37.pyc
-pyspatialml/__pycache__/__plotting.cpython-37.pyc
-pyspatialml/__pycache__/indexing.cpython-36.pyc
-pyspatialml/__pycache__/indexing.cpython-37.pyc
-pyspatialml/__pycache__/plotting.cpython-37.pyc
-pyspatialml/__pycache__/preprocessing.cpython-37.pyc
-pyspatialml/__pycache__/transformations.cpython-37.pyc
-pyspatialml/__pycache__/vectortools.cpython-36.pyc
-pyspatialml/__pycache__/plotting.cpython-37.pyc
-pyspatialml/__pycache__/__main.cpython-37.pyc
-pyspatialml/__pycache__/__init__.cpython-37.pyc
-pyspatialml/datasets/.ipynb_checkpoints/meuse_dataset-checkpoint.py
-pyspatialml/datasets/.ipynb_checkpoints/nc_dataset-checkpoint.py
-pyspatialml/datasets/__pycache__/meuse_dataset.cpython-37.pyc
-pyspatialml/datasets/__pycache__/__init__.cpython-37.pyc
-pyspatialml/__pycache__/plotting.cpython-37.pyc
-pyspatialml/__pycache__/__main.cpython-37.pyc
-pyspatialml/__pycache__/__init__.cpython-37.pyc
-tests/.ipynb_checkpoints/test_extract-checkpoint.py
-tests/.ipynb_checkpoints/test_prediction-checkpoint.py
-tests/__pycache__/test_extract.cpython-37.pyc
-tests/__pycache__/test_indexing.cpython-37.pyc
-tests/__pycache__/test_initiation.cpython-37.pyc
-tests/__pycache__/test_prediction.cpython-37.pyc
-pyspatialml/__pycache__/__init__.cpython-36.pyc
-pyspatialml/__pycache__/__init__.cpython-37.pyc
-pyspatialml/__pycache__/__main.cpython-36.pyc
-pyspatialml/__pycache__/__main.cpython-37.pyc
-pyspatialml/__pycache__/utils.cpython-37.pyc
-pyspatialml/__pycache__/vector.cpython-36.pyc
-pyspatialml/datasets/__pycache__/nc_dataset.cpython-37.pyc
-pyspatialml/__pycache__/__main.cpython-37.pyc
-pyspatialml/__pycache__/__main.cpython-37.pyc
-pyspatialml/__pycache__/base.cpython-37.pyc
-pyspatialml/__pycache__/raster.cpython-37.pyc
-pyspatialml/__pycache__/rasterlayer.cpython-37.pyc
-.idea/codeStyles/codeStyleConfig.xml
-__pycache__/setup.cpython-37.pyc
-docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/entry_points.txt
-docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/LICENSE
-docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/PKG-INFO
-docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/RECORD
-docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/requires.txt
-docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/top_level.txt
-docs/.eggs/pytest_runner-5.1-py3.7.egg/EGG-INFO/WHEEL
-docs/.eggs/pytest_runner-5.1-py3.7.egg/ptr.py
-docs/.eggs/README.txt
-pyspatialml.egg-info/dependency_links.txt
-pyspatialml/datasets/__pycache__/meuse.cpython-37.pyc
-pyspatialml/datasets/__pycache__/nc.cpython-37.pyc
-.eggs/pytest_runner-5.2-py3.7.egg/ptr.py
-.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/WHEEL
-.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/top_level.txt
-.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/requires.txt
-.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/RECORD
-.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/PKG-INFO
-.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/LICENSE
-.eggs/pytest_runner-5.2-py3.7.egg/EGG-INFO/entry_points.txt
-
-pyspatialml/__pycache__/base\.cpython-36\.pyc
-
-pyspatialml/__pycache__/preprocessing\.cpython-36\.pyc
-
-pyspatialml/__pycache__/raster\.cpython-36\.pyc
-pyspatialml/__pycache__/vector.cpython-37.pyc
-tests/__pycache__/test_calc.cpython-37.pyc
-tests/__pycache__/test_mask.cpython-37.pyc
-tests/__pycache__/test_crop.cpython-37.pyc
-tests/__pycache__/test_drop.cpython-37.pyc
-tests/__pycache__/test_intersect.cpython-37.pyc
-tests/__pycache__/test_rename.cpython-37.pyc
-tests/__pycache__/test_to_crs.cpython-37.pyc
-tests/__pycache__/test_tocrs.cpython-37.pyc
-tests/__pycache__/test_append.cpython-37.pyc
-tests/__pycache__/test_tocrs.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_rename.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_prediction.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_mask.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_intersect.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_initiation.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_indexing.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_extract.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_drop.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_crop.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_calc.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/test_append.cpython-37-pytest-5.3.5.pyc
-tests/__pycache__/__init__.cpython-37.pyc
-docs/_build/html/_static/js/theme.js
-docs/_build/html/_static/js/modernizr.min.js
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.woff2
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.woff
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.ttf
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.eot
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.woff2
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.woff
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.ttf
-docs/_build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.eot
-docs/_build/html/_static/fonts/RobotoSlab-Regular.ttf
-docs/_build/html/_static/fonts/RobotoSlab-Bold.ttf
-docs/_build/html/_static/fonts/Lato/lato-regular.woff2
-docs/_build/html/_static/fonts/Lato/lato-regular.woff
-docs/_build/html/_static/fonts/Lato/lato-regular.ttf
-docs/_build/html/_static/fonts/Lato/lato-regular.eot
-docs/_build/html/_static/fonts/Lato/lato-italic.woff2
-docs/_build/html/_static/fonts/Lato/lato-italic.woff
-docs/_build/html/_static/fonts/Lato/lato-italic.ttf
-docs/_build/html/_static/fonts/Lato/lato-italic.eot
-docs/_build/html/_static/fonts/Lato/lato-bolditalic.woff2
-docs/_build/html/_static/fonts/Lato/lato-bolditalic.woff
-docs/_build/html/_static/fonts/Lato/lato-bolditalic.ttf
-docs/_build/html/_static/fonts/Lato/lato-bolditalic.eot
-docs/_build/html/_static/fonts/Lato/lato-bold.woff2
-docs/_build/html/_static/fonts/Lato/lato-bold.woff
-docs/_build/html/_static/fonts/Lato/lato-bold.ttf
-docs/_build/html/_static/fonts/Lato/lato-bold.eot
-docs/_build/html/_static/fonts/Lato-Regular.ttf
-docs/_build/html/_static/fonts/Lato-Bold.ttf
-docs/_build/html/_static/fonts/Inconsolata.ttf
-docs/_build/html/_static/fonts/Inconsolata-Regular.ttf
-docs/_build/html/_static/fonts/Inconsolata-Bold.ttf
-docs/_build/html/_static/fonts/fontawesome-webfont.woff2
-docs/_build/html/_static/fonts/fontawesome-webfont.woff
-docs/_build/html/_static/fonts/fontawesome-webfont.ttf
-docs/_build/html/_static/fonts/fontawesome-webfont.svg
-docs/_build/html/_static/fonts/fontawesome-webfont.eot
-docs/_build/html/_static/css/theme.css
-docs/_build/html/_static/css/badge_only.css
-.eggs/pytest_runner-5.2-py3.8.egg/ptr.py
-.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/WHEEL
-.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/top_level.txt
-.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/requires.txt
-.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/RECORD
-.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/PKG-INFO
-.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/LICENSE
-.eggs/pytest_runner-5.2-py3.8.egg/EGG-INFO/entry_points.txt
+.eggs/
+.idea/
+.vscode/
+.pytest_cache/
+*__pycache__/
+*egg*
