--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install pytest flake8
         sudo apt-get update -y
         sudo apt-get install gdal-bin libproj-dev libgdal-dev proj-bin
 
