--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-    - name: "Upload coverage to Codecov"
+    - name: "Generate Report"
+      run : |
+        pip install coverage
+        coverage run -m pytest
+    - name: "Upload Report to Codecov"
       uses: codecov/codecov-action@v1
       with:
         fail_ci_if_error: true
