--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,32 +11,40 @@ jobs:
         python-version: [3.9, '3.10', 3.11, 3.12]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+
+    - name: Install system dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest flake8
         sudo apt-get update -y
         sudo apt-get install gdal-bin libproj-dev libgdal-dev proj-bin
 
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
     - name: Lint with flake8
       run: |
+        pip install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Test with pytest
       run: |
+        pip install pytest
         pytest
+
     - name: "Generate Report"
       run : |
         pip install coverage
         coverage run -m pytest
+
     - name: "Upload Report to Codecov"
       uses: codecov/codecov-action@v1
       with:
