--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,8 +22,7 @@ jobs:
         pip install pytest flake8
         sudo apt-get update -y
         sudo apt-get install gdal-bin libproj-dev libgdal-dev proj-bin
-
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        f [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
