--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ homepage = "https://stevenpawley.github.io/Pyspatialml/"
 repository = "https://github.com/stevenpawley/Pyspatialml"
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = "^3.9"
 tqdm = "^4.66.4"
 rasterio = "^1.3.10"
 geopandas = "^0.14.4"
@@ -19,6 +19,7 @@ shapely = "^2.0.4"
 pandas = "^2.2.2"
 matplotlib = "^3.9.0"
 scikit-learn = "^1.4.2"
+affine = "^2.4.0"
 
 [build-system]
 requires = ["poetry-core"]
