--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -15,7 +15,7 @@ jobs:
         run : |
           sudo apt-get update
           sudo apt-get upgrade
-          sudo apt-get install saga libudunits2-dev libgdal-dev libcurl4-openssl-dev
+          sudo apt-get install libudunits2-dev libgdal-dev libcurl4-openssl-dev
 
       - name: Set up python
         id: setup-python
