docs move examples into tutorials section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,6 +65,8 @@ website:
         - section: "Machine learning examples"
           contents:
             - docs/landcover.qmd
+            - docs/multitarget-regression-soil-properties.qmd
+            - docs/spatial-features.qmd
 
 theme:
   light: spacelab
