add coverage to test dependencies in poetry.lock

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: "Generate Report"
       run : |
-        pip install coverage
+        source .venv/bin/activate
         coverage run -m pytest
 
     - name: "Upload Report to Codecov"
