--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Run pytest and upload coverage to Codecov
 
 on: [push]
 
@@ -48,8 +48,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        source .venv/bin/activate
-        poetry run pytest --cov=<project-dir> --cov-report=xml
+        poetry run pytest --cov-report=xml
 
     - name: "Upload Report to Codecov"
       uses: codecov/codecov-action@v3
