--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ black = "^24.4.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.2.0"
+pytest-cov = "^5.0.0"
 coverage = "^7.5.3"
 
 [build-system]
