--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        poetry run pytest --cov=Pyspatialml --cov-report=xml
+        poetry run pytest --cov-report=coverage.xml
 
     - name: "Upload Report to Codecov"
       uses: codecov/codecov-action@v3
