--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,5 +53,6 @@ jobs:
     - name: "Upload Report to Codecov"
       uses: codecov/codecov-action@v3
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
         fail_ci_if_error: true
