--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,27 +24,10 @@ jobs:
         sudo apt-get update -y
         sudo apt-get install gdal-bin libproj-dev libgdal-dev proj-bin
 
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-        installer-parallel: true
-
-    - name: Install package dependencies
-      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      run: poetry install --no-interaction --no-root
-    
-    - name: Install library
-      run: poetry install --no-interaction
-
-    # - name: Lint with flake8
-    #   run: |
-    #     source .venv/bin/activate        
-    #     # stop the build if there are Python syntax errors or undefined names
-    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
+        pip install -r <(python -c 'import toml; print("\n".join(toml.load("pyproject.toml")["project"]["dependencies"]))')
 
     - name: Test with pytest
       run: |
