remove poetry command

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        poetry run pytest --cov-report=xml --cov=.
+        pytest --cov-report=xml --cov=.
 
     - name: "Upload Report to Codecov"
       uses: codecov/codecov-action@v4.2.0
