--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install -r <(python -c 'import toml; print("\n".join(toml.load("pyproject.toml")["project"]["dependencies"]))')
-        pip install -r <(python -c 'import toml; print("\n".join(toml.load("pyproject.toml")["project.optional-dependencies"]["testing"]))')
+        pip install .
+        pip install .[testing]
 
     - name: Test with pytest
       run: |
